--- a/{{cookiecutter.slug}}/{{cookiecutter.css_path}}/reveal-override.scss
+++ b/{{cookiecutter.slug}}/{{cookiecutter.css_path}}/reveal-override.scss
@@ -34,6 +34,10 @@ body {
     iframe, img {
 	border: none;
     }
+	
+    section img {
+	border:none; box-shadow:none;
+    }
 
     .fragment {
 	.visible {
